results/SVCOMP/houdini/log-StringBuilderChars03-2024_03_19_04_35_07.txt
public class StringBuilderChars03 {
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    return buffer.charAt(0) == buffer.charAt(4);
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123");
    f("#$%^#*123");
    f("fsgdhj");
    f("DiffBlue L1mitted");
    f("DiffDlue Limitted");
    f("");
  }
}


/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringBuilderChars03 {
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    return buffer.charAt(0) == buffer.charAt(4);
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123");
    f("#$%^#*123");
    f("fsgdhj");
    f("DiffBlue L1mitted");
    f("DiffDlue Limitted");
    f("");
  }
}


OpenJML not responding. Aborted.
